# crnn_ws

./: .gitignore
crnn_cpp/: CMakeLists.txt  package.xml
crnn_cpp/src/: audio_sub.cpp
crnn_py/: package.xml  setup.cfg  setup.py
crnn_py/crnn_py/: results.py  upload.py
crnn_py/crnn_py/net/: __init__.py  audio.py  model.py
crnn_py/crnn_py/utils/: util.py
my_custom_interfaces/: CMakeLists.txt  package.xml
my_custom_interfaces/msg/: ResultsData.msg
my_launch_pkg/: package.xml
my_launch_pkg/launch/: audio_ros.launch.py
