<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crnn_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alvindavid898@gmail.com">ingaiza</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>my_custom_interfaces</depend>

  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-xgboost</exec_depend>
  <exec_depend>python3-soundfile</exec_depend>
  <exec_depend>python3-torchaudio</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>python3-pandas</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
